Feat : readme , authors

--- a/AUTHORS
+++ b/AUTHORS
@@ -1,1 +1,4 @@
-## This lists all individuals (github username and email) that contributed to this project.
+## This lists all individuals (names and emails) that contributed to this project.
+
+Josué Makuta <makutajosue@gmail.com>
+Nwafor Favour Nnenna Nnenna <favournnenna55@gmail.com>
